--- a/uboot-mtk-20230718-09eda825/arch/arm/dts/mt7981-h3c_magic-nx30-pro.dts
+++ b/uboot-mtk-20230718-09eda825/arch/arm/dts/mt7981-h3c_magic-nx30-pro.dts
@@ -21,6 +21,20 @@
 		system_led = "red:status";
 	};
 
+	mtd-layout {
+		layout@0 {
+			label = "default";
+			mtdids = "nmbm0=nmbm0";
+			mtdparts = "nmbm0:1024k(bl2),512k(u-boot-env),2048k(Factory),2048k(fip),65536k(ubi),6144k(pdt_data),6144k(pdt_data_1),1024k(exp),38400k(plugin)";
+		};
+
+		layout@1 {
+			label = "112m";
+			mtdids = "nmbm0=nmbm0";
+			mtdparts = "nmbm0:1024k(bl2),512k(u-boot-env),2048k(Factory),2048k(fip),114688k(ubi)";
+		};
+	};
+
 	gpio-keys {
 		compatible = "gpio-keys";
 
